<resources>
    <string name="app_name">Gezgin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ayarlar</string>
    <string name="title_activity_login">Gezgin</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-posta</string>
    <string name="prompt_password">Şifre (Opsiyonel)</string>
    <string name="action_sign_in">Giriş Yap veya Kayıt Ol</string>
    <string name="action_sign_in_short">Giriş Yap</string>
    <string name="error_invalid_email">Hatalı e-posta adresi!</string>
    <string name="error_invalid_password">Parola çok kısa. Parolanız en az 8 karakter olmalı ve en az bir büyük harf ve bir rakam içermelidir.</string>
    <string name="error_incorrect_password">Hatalı parola!</string>
    <string name="error_field_required">Bu alan zorunludur!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_route">Rota</string>
    <string name="nav_settings">Ayarlar</string>
    <string name="nav_greet">Karşılama</string>
    <string name="nav_login">Giriş</string>

    <string name="newmember">Üye ol</string>
    <string name="member">Üye Girişi</string>
    <string name="notmember">Üye olmadan devam et</string>
    <string name="greeting">Nasıl devam etmek istersiniz?</string>
    <string name="facebooklogin">\u0020ile bağlan</string>
    <string name="googlelogin">\u0020ile bağlan</string>
    <string name="facebookregister">\u0020ile üye ol</string>
    <string name="googleregister">\u0020ile üye ol</string>
    <string name="icon_facebook" translatable="false">&#xf230;</string>
    <string name="icon_google" translatable="false">&#xf0d5;</string>
    <string name="hint_e_posta">E-Posta</string>
    <string name="hint_sifre">Şifre</string>
    <string name="pass_reminder_text">Şifrenizi unuttusanız buraya dokunun.</string>
    <string name="my_location">Konumum</string>

    <string name="route_settings">Rota Ayarları</string>

    <string name="route_settings_dialog_save">Rota ayarlarını kaydet</string>

    <array name="arr_route_settings">
        <item>Ücretli Yolları kullanma</item>
        <item>Ana Yolları kullanma</item>
        <item>Feribot kullanma</item>
    </array>

    <string name="select_place_type_title">mekan tipi seçiniz</string>

    <string name="select_place_type_button">Seç</string>

    <array name="arr_place_type_text">
        <item>Restoran</item>
        <item>Kafe</item>
        <item>Sanat Galerisi</item>
        <item>Sinema</item>
        <item>Müze</item>
        <item>Gece Kulübü</item>
        <item>Cami</item>
        <item>Kilise</item>
        <item>Alışveriş Merkezi</item>
        <item>Park</item>
        <item>Hayvanat Bahçesi</item>
        <item>Casino</item>
        <item>Eğlence Parkı</item>
        <item>Akvaryum</item>
        <item>Bowling</item>
        <item>Stadyum</item>
        <item>Üniversite</item>
    </array>
    <array name="arr_place_type_values">
        <item>restaurant</item>
        <item>cafe</item>
        <item>art_gallery</item>
        <item>movie_theater</item>
        <item>museum</item>
        <item>night_club</item>
        <item>mosque</item>
        <item>church</item>
        <item>shopping_mall</item>
        <item>park</item>
        <item>zoo</item>
        <item>casino</item>
        <item>amusement_park</item>
        <item>aquarium</item>
        <item>bowling_alley</item>
        <item>stadium</item>
        <item>university</item>
    </array>

    <string name="no_places_found">Seçili kriterlere göre mekan bulunamadı.</string>
</resources>
