<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_route"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/nav_route" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_greet"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/nav_greet" />

        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/nav_login" />

    </group>

</menu>
