<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mirketech.gezgin.LoginFragment">

    <!-- Login progress -->
    <ImageView
        android:id="@+id/gezginLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:src="@drawable/gezgin_logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="30dp">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnexistingmember"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textColor="@color/white"
            fancy:fb_defaultColor="@color/login_Button"
            fancy:fb_radius="5dp"
            fancy:fb_text="@string/member"
            fancy:fb_textColor="@color/white"
            fancy:fb_textGravity="center"
            fancy:fb_textSize="20dp"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            android:layout_below="@+id/greeting"
            android:layout_marginTop="20dp"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnnewmember"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textColor="@color/white"
            fancy:fb_defaultColor="@color/login_Button"
            fancy:fb_radius="5dp"
            fancy:fb_text="@string/newmember"
            fancy:fb_textColor="@color/white"
            fancy:fb_textGravity="center"
            fancy:fb_textSize="20dp"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            android:layout_below="@+id/btnexistingmember"
            android:layout_marginTop="20dp" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnnotmember"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textColor="@color/white"
            fancy:fb_defaultColor="@color/login_Button"
            fancy:fb_radius="5dp"
            fancy:fb_text="@string/notmember"
            fancy:fb_textColor="@color/white"
            fancy:fb_textGravity="center"
            fancy:fb_textSize="20dp"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            android:layout_below="@+id/btnnewmember"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting"
            android:id="@+id/greeting"
            android:textColor="@color/white"
            android:textSize="21dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</LinearLayout>
