<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:hint="Ad Soyad"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColorHint="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_marginTop="20dp"
            android:hint="E-posta"
            android:layout_below="@+id/editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColorHint="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_marginTop="20dp"
            android:hint="Şifre"
            android:layout_below="@+id/editText2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColorHint="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText3"
            android:hint="Şifre"
            android:layout_below="@+id/editText4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:textColor="@color/white"
            fancy:fb_defaultColor="@color/login_Button"
            fancy:fb_radius="5dp"
            fancy:fb_text="Kayıt Ol"
            fancy:fb_textColor="@color/white"
            fancy:fb_textGravity="center"
            fancy:fb_textSize="20sp"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            android:layout_below="@+id/editText3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnfacebook"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            fancy:fb_defaultColor="#3b5998"
            fancy:fb_radius="5dp"
            fancy:fb_fontIconSize="30dp"
            fancy:fb_text="@string/facebookregister"
            fancy:fb_textColor="@color/white"
            fancy:fb_textSize="20sp"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            fancy:fb_iconPosition="left"
            fancy:fb_fontIconResource="@string/icon_facebook"
            android:layout_below="@+id/btnlogin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="27dp" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btngoogle"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            fancy:fb_defaultColor="#dd4b39"
            fancy:fb_radius="5dp"
            fancy:fb_text="@string/googleregister"
            fancy:fb_textColor="@color/white"
            fancy:fb_textSize="20sp"
            fancy:fb_focusColor="#8A0707"
            fancy:fb_iconPosition="left"
            fancy:fb_iconPaddingLeft="1dp"
            fancy:fb_fontIconResource="@string/icon_google"
            fancy:fb_fontIconSize="30dp"
            android:layout_alignTop="@+id/btnfacebook"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</LinearLayout>